--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "mongoose": "^5.0.7",
-    "node-fetch": "^2.0.0"
+    "node-fetch": "^2.0.0",
+    "uniqid": "^4.1.1",
+    "validated": "^1.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
